# scorebored

./: .gitignore  README.md  app.cfg  app.py  pyproject.toml
scorebored/: __init__.py  config.py  controller.py  database.py  exceptions.py  schema.py
scorebored/components/: __init__.py
scorebored/components/game/: __init__.py  controller.py  database.py  schema.py  service.py
scorebored/components/match/: __init__.py  controller.py  database.py
scorebored/components/match/schema/: __init__.py  match.py  result.py
scorebored/components/match/service/: __init__.py  match.py  result.py
scorebored/components/player/: __init__.py  controller.py  database.py  schema.py  service.py
scorebored/components/side/: __init__.py  controller.py  database.py  schema.py
scorebored/components/side/service/: __init__.py  side.py  sideplayer.py
scorebored/components/stats/: __init__.py  database.py  schema.py  service.py
scorebored/overrides/aioli_rdbms/: service.py
scorebored/service/: __init__.py  base.py  game.py  match.py  match_result.py  player.py  side.py  side_player.py
tests/: test_scorebored.py
