[tool.poetry]
name = "scorebored"
version = "0.1.0"
description = ""
authors = ["Petter Nyström <pnystrom@op5.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aioli = "^0.5.0"
aioli_rdbms = "^0.1.9"
aioli_openapi = "^0.1.8"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
